--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1445,9 +1445,89 @@ address {
   cursor: default;
 }
 
-.button-9:focus {
-  /* box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px; */
+
+
+@media (max-width: 780px) {
+
+  .about-group {
+    flex-direction: column;
+    padding: 0px 40px;
+  }
+
+  .about-element {
+    width: 100%;
+  }
+
+  .f-element {
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .candado {
+    flex-direction: column;
+  }
+
+  .candado .c-icon {
+    width: 100%;
+  }
+
+  .candado .c-text {
+    width: 100%;
+    text-align: center;
+  }
+
+  .tools-element {
+    flex-direction: column;
+  }
+
+  .tools-text {
+    width: 100%;
+  }
+
+  .fet-content {
+    width: 100%;
+    flex-direction: column;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .fet-two-element {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .fet-element {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .help-content {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .prices-content {
+    width: 100%;
+    margin: 0 auto;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .price-element {
+    width: 100%;
+    margin: 10px 0px 30px 0px;
+    flex-direction: column;
+    text-align: center;
+  }
+
+
+
 }
+
+
+
 
 
 /* Section Fees */
@@ -1559,6 +1639,7 @@ address {
 }
 
 .tools-text {
+  width: 70%;
   margin: 0px 50px;
 }
 
@@ -1585,6 +1666,15 @@ address {
    font-size: 2.7em;
    font-weight: 200;
    margin: 20px auto;
+}
+
+.tools-img {
+  width: 70%;
+}
+
+
+.tools-img img{
+  width: 100%;
 }
 
 /* Prices */
